--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html><head>
+<meta name="google-site-verification" content="yFGI0XxqbIVhfJ34yGw8IeEbJW0Ll4__2_bJbA36xiU" />
 <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type"><title>Miscellaneous Projects</title>
 
 </head><body>
